# libspdm

./: CMakeLists.txt
doc/: standard_measurement_report.md
include/industry_standard/: spdm.h  spdm_authorization.h
include/internal/: libspdm_auth_requester_lib.h  libspdm_auth_responder_lib.h  libspdm_common_lib.h  libspdm_crypt_lib.h  libspdm_requester_lib.h  libspdm_responder_lib.h
os_stub/cryptlib_gmssl/: CMakeLists.txt  internal_crypt_lib.h
os_stub/cryptlib_gmssl/cipher/: aead_aes_gcm.c  aead_chacha20_poly1305.c  aead_sm4_gcm.c
os_stub/cryptlib_gmssl/hash/: sha.c  sha3.c  sm3.c
os_stub/cryptlib_gmssl/hmac/: hmac_sha.c  hmac_sm3.c
os_stub/cryptlib_gmssl/kdf/: hkdf_sha.c  hkdf_sm3.c
os_stub/cryptlib_gmssl/pem/: pem.c
os_stub/cryptlib_gmssl/pk/: dh.c  ec.c  ecd.c  rsa_basic.c  rsa_ext.c  sm2.c  x509.c
os_stub/cryptlib_gmssl/rand/: rand.c
os_stub/cryptlib_gmssl/sys_call/: crt_wrapper_host.c
os_stub/cryptlib_tongsuo/: CMakeLists.txt
os_stub/cryptlib_tongsuo/cipher/: aead_sm4_gcm.c
os_stub/cryptlib_tongsuo/pk/: sm2.c
os_stub/gmssllib/: CMakeLists.txt  version.txt
os_stub/gmssllib/include/: crt_support.h
os_stub/mbedtlslib/: CMakeLists.txt
os_stub/oqslib/: CMakeLists.txt
os_stub/pqccryptlib_null/: mldsa_basic.c  mldsa_ext.c
os_stub/pqccryptlib_oqs/: internal_pqccrypt_lib.h  mldsa_basic.c  mldsa_ext.c  mlkem.c  x509_cert.c
os_stub/spdm_auth_device_secret_lib_sample/: CMakeLists.txt  auth_capabilities.c  auth_policy.c  auth_sign.c  auth_verify.c  cred_id_params.c  ownership.c  reset_to_default.c  spdm_auth_device_secret_lib_internal.h
os_stub/spdm_crypt_ext_lib/: CMakeLists.txt  spdm_crypt_auth_ext.c  spdm_crypt_ext_lib.h
os_stub/tongsuolib/: CMakeLists.txt  buildinf.h  der_digests_gen.c  der_rsa_gen.c  rand_pool.c  version.txt
os_stub/tongsuolib/include/: crt_support.h
os_stub/tongsuolib/include/openssl/: configuration.h  err.h  ssl.h  x509v3.h
os_stub/tongsuolib/include/prov/: der_digests.h  der_rsa.h
unit_test/gen_pqc_key/: gen_pqc_key.c
unit_test/test_crypt/: CMakeLists.txt  sm2_verify.c
unit_test/test_crypt_oqs/: CMakeLists.txt  kem_verify.c  os_support.c  sig_verify.c  test_crypt_oqs.c
unit_test/test_spdm_requester/: CMakeLists.txt
unit_test/test_spdm_responder/: CMakeLists.txt
