cmake_minimum_required(VERSION 2.8.12)

ADD_COMPILE_OPTIONS(-DLIBSPDM_OPENSSL_STDINT_WORKAROUND -DL_ENDIAN -DOPENSSL_SMALL_FOOTPRINT -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DOPENSSL_SYS_UEFI=1 -DOPENSSL_API_COMPAT=0x10101000 ${OPENSSL_FLAGS})

if (ARCH STREQUAL "ia32")
    ADD_COMPILE_OPTIONS(-DLIBSPDM_CPU_IA32)
elseif (ARCH STREQUAL "x64")
    ADD_COMPILE_OPTIONS(-DLIBSPDM_CPU_X64)
endif()

INCLUDE_DIRECTORIES(${LIBSPDM_DIR}/include
                    ${LIBSPDM_DIR}/include/hal
                    ${LIBSPDM_DIR}/os_stub/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/include/crypto
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/store
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/x509
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/ui
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/txt_db
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/stack
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/siphash
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/sha
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/rsa
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/rand
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/poly1305
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/pkcs7
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/pkcs12
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/pem
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/ocsp
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/objects
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/modes
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/md5
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/lhash
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/kdf
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/hmac
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/evp
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/err
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/dso
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/ec
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/ec/curve448
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/ec/curve448/arch_32
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/dh
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/conf
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/comp
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/cmac
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/chacha
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/buffer
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/bn
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/bio
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/async
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/async/arch
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/asn1
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/aria
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/aes
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/sm2
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/sm3
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/crypto/sm4
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/ms
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/providers/common/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/providers/implementations/include
                    ${LIBSPDM_DIR}/os_stub/tongsuolib/Tongsuo/providers/implementations/ciphers

)

SET(src_tongsuolib
    Tongsuo/crypto/aes/aes_cbc.c
    Tongsuo/crypto/aes/aes_cfb.c
    Tongsuo/crypto/aes/aes_core.c
    Tongsuo/crypto/aes/aes_ecb.c
    Tongsuo/crypto/aes/aes_ige.c
    Tongsuo/crypto/aes/aes_misc.c
    Tongsuo/crypto/aes/aes_ofb.c
    Tongsuo/crypto/aes/aes_wrap.c
    Tongsuo/crypto/asn1/a_bitstr.c
    Tongsuo/crypto/asn1/a_d2i_fp.c
    Tongsuo/crypto/asn1/a_digest.c
    Tongsuo/crypto/asn1/a_dup.c
    Tongsuo/crypto/asn1/a_gentm.c
    Tongsuo/crypto/asn1/a_i2d_fp.c
    Tongsuo/crypto/asn1/a_int.c
    Tongsuo/crypto/asn1/a_mbstr.c
    Tongsuo/crypto/asn1/a_object.c
    Tongsuo/crypto/asn1/a_octet.c
    Tongsuo/crypto/asn1/a_print.c
    Tongsuo/crypto/asn1/a_sign.c
    Tongsuo/crypto/asn1/a_strex.c
    Tongsuo/crypto/asn1/a_strnid.c
    Tongsuo/crypto/asn1/a_time.c
    Tongsuo/crypto/asn1/a_type.c
    Tongsuo/crypto/asn1/a_utctm.c
    Tongsuo/crypto/asn1/a_utf8.c
    Tongsuo/crypto/asn1/a_verify.c
    Tongsuo/crypto/asn1/ameth_lib.c
    Tongsuo/crypto/asn1/asn1_err.c
    Tongsuo/crypto/asn1/asn1_gen.c
    Tongsuo/crypto/asn1/asn1_item_list.c
    Tongsuo/crypto/asn1/asn1_lib.c
    Tongsuo/crypto/asn1/asn1_parse.c
    Tongsuo/crypto/asn1/asn_mime.c
    Tongsuo/crypto/asn1/asn_moid.c
    Tongsuo/crypto/asn1/asn_mstbl.c
    Tongsuo/crypto/asn1/asn_pack.c
    Tongsuo/crypto/asn1/bio_asn1.c
    Tongsuo/crypto/asn1/bio_ndef.c
    Tongsuo/crypto/asn1/d2i_pr.c
    Tongsuo/crypto/asn1/d2i_pu.c
    Tongsuo/crypto/asn1/evp_asn1.c
    Tongsuo/crypto/asn1/f_int.c
    Tongsuo/crypto/asn1/f_string.c
    Tongsuo/crypto/asn1/i2d_evp.c
    Tongsuo/crypto/asn1/n_pkey.c
    Tongsuo/crypto/asn1/nsseq.c
    Tongsuo/crypto/asn1/p5_pbe.c
    Tongsuo/crypto/asn1/p5_pbev2.c
    Tongsuo/crypto/asn1/p5_scrypt.c
    Tongsuo/crypto/asn1/p8_pkey.c
    Tongsuo/crypto/asn1/t_bitst.c
    Tongsuo/crypto/asn1/t_pkey.c
    Tongsuo/crypto/asn1/t_spki.c
    Tongsuo/crypto/asn1/tasn_dec.c
    Tongsuo/crypto/asn1/tasn_enc.c
    Tongsuo/crypto/asn1/tasn_fre.c
    Tongsuo/crypto/asn1/tasn_new.c
    Tongsuo/crypto/asn1/tasn_prn.c
    Tongsuo/crypto/asn1/tasn_scn.c
    Tongsuo/crypto/asn1/tasn_typ.c
    Tongsuo/crypto/asn1/tasn_utl.c
    Tongsuo/crypto/asn1/x_algor.c
    Tongsuo/crypto/asn1/x_bignum.c
    Tongsuo/crypto/asn1/x_info.c
    Tongsuo/crypto/asn1/x_int64.c
    Tongsuo/crypto/asn1/x_long.c
    Tongsuo/crypto/asn1/x_pkey.c
    Tongsuo/crypto/asn1/x_sig.c
    Tongsuo/crypto/asn1/x_spki.c
    Tongsuo/crypto/asn1/x_val.c
    Tongsuo/crypto/asn1_dsa.c
    Tongsuo/crypto/async/arch/async_null.c
    Tongsuo/crypto/async/arch/async_posix.c
    Tongsuo/crypto/async/arch/async_win.c
    Tongsuo/crypto/async/async.c
    Tongsuo/crypto/async/async_err.c
    Tongsuo/crypto/async/async_wait.c
    Tongsuo/crypto/bio/bf_buff.c
    Tongsuo/crypto/bio/bf_lbuf.c
    Tongsuo/crypto/bio/bf_nbio.c
    Tongsuo/crypto/bio/bf_null.c
    Tongsuo/crypto/bio/bf_prefix.c
    Tongsuo/crypto/bio/bf_readbuff.c
    Tongsuo/crypto/bio/bio_cb.c
    Tongsuo/crypto/bio/bio_dump.c
    Tongsuo/crypto/bio/bio_err.c
    Tongsuo/crypto/bio/bio_lib.c
    Tongsuo/crypto/bio/bio_meth.c
    Tongsuo/crypto/bio/bio_print.c
    Tongsuo/crypto/bio/bss_acpt.c
    Tongsuo/crypto/bio/bss_bio.c
    Tongsuo/crypto/bio/bss_conn.c
    Tongsuo/crypto/bio/bss_core.c
    Tongsuo/crypto/bio/bss_dgram.c
    Tongsuo/crypto/bio/bss_fd.c
    Tongsuo/crypto/bio/bss_file.c
    Tongsuo/crypto/bio/bss_log.c
    Tongsuo/crypto/bio/bss_mem.c
    Tongsuo/crypto/bio/bss_null.c
    Tongsuo/crypto/bio/bss_sock.c
    Tongsuo/crypto/bio/ossl_core_bio.c
    Tongsuo/crypto/bn/bn_add.c
    Tongsuo/crypto/bn/bn_asm.c
    Tongsuo/crypto/bn/bn_blind.c
    Tongsuo/crypto/bn/bn_const.c
    Tongsuo/crypto/bn/bn_conv.c
    Tongsuo/crypto/bn/bn_ctx.c
    Tongsuo/crypto/bn/bn_depr.c
    Tongsuo/crypto/bn/bn_dh.c
    Tongsuo/crypto/bn/bn_div.c
    Tongsuo/crypto/bn/bn_err.c
    Tongsuo/crypto/bn/bn_exp.c
    Tongsuo/crypto/bn/bn_exp2.c
    Tongsuo/crypto/bn/bn_gcd.c
    Tongsuo/crypto/bn/bn_gf2m.c
    Tongsuo/crypto/bn/bn_intern.c
    Tongsuo/crypto/bn/bn_kron.c
    Tongsuo/crypto/bn/bn_lib.c
    Tongsuo/crypto/bn/bn_mod.c
    Tongsuo/crypto/bn/bn_mont.c
    Tongsuo/crypto/bn/bn_mpi.c
    Tongsuo/crypto/bn/bn_mul.c
    Tongsuo/crypto/bn/bn_nist.c
    Tongsuo/crypto/bn/bn_prime.c
    Tongsuo/crypto/bn/bn_print.c
    Tongsuo/crypto/bn/bn_rand.c
    Tongsuo/crypto/bn/bn_recp.c
    Tongsuo/crypto/bn/bn_rsa_fips186_4.c
    Tongsuo/crypto/bn/bn_shift.c
    Tongsuo/crypto/bn/bn_sqr.c
    Tongsuo/crypto/bn/bn_sqrt.c
    Tongsuo/crypto/bn/bn_srp.c
    Tongsuo/crypto/bn/bn_word.c
    Tongsuo/crypto/bn/bn_x931p.c
    Tongsuo/crypto/bsearch.c
    Tongsuo/crypto/buffer/buf_err.c
    Tongsuo/crypto/buffer/buffer.c
    Tongsuo/crypto/chacha/chacha_enc.c
    Tongsuo/crypto/cmp/cmp_util.c
    Tongsuo/crypto/comp/c_zlib.c
    Tongsuo/crypto/comp/comp_err.c
    Tongsuo/crypto/comp/comp_lib.c
    Tongsuo/crypto/conf/conf_api.c
    Tongsuo/crypto/conf/conf_def.c
    Tongsuo/crypto/conf/conf_err.c
    Tongsuo/crypto/conf/conf_lib.c
    Tongsuo/crypto/conf/conf_mall.c
    Tongsuo/crypto/conf/conf_mod.c
    Tongsuo/crypto/conf/conf_sap.c
    Tongsuo/crypto/conf/conf_ssl.c
    Tongsuo/crypto/context.c
    Tongsuo/crypto/core_algorithm.c
    Tongsuo/crypto/core_namemap.c
    Tongsuo/crypto/core_fetch.c
    Tongsuo/crypto/cpt_err.c
    Tongsuo/crypto/cpuid.c
    Tongsuo/crypto/cryptlib.c
    Tongsuo/crypto/ctype.c
    Tongsuo/crypto/cversion.c
    Tongsuo/crypto/der_writer.c
    Tongsuo/crypto/dh/dh_ameth.c
    Tongsuo/crypto/dh/dh_asn1.c
    Tongsuo/crypto/dh/dh_backend.c
    Tongsuo/crypto/dh/dh_check.c
    Tongsuo/crypto/dh/dh_depr.c
    Tongsuo/crypto/dh/dh_err.c
    Tongsuo/crypto/dh/dh_gen.c
    Tongsuo/crypto/dh/dh_group_params.c
    Tongsuo/crypto/dh/dh_kdf.c
    Tongsuo/crypto/dh/dh_key.c
    Tongsuo/crypto/dh/dh_lib.c
    Tongsuo/crypto/dh/dh_meth.c
    Tongsuo/crypto/dh/dh_pmeth.c
    Tongsuo/crypto/dh/dh_prn.c
    Tongsuo/crypto/dh/dh_rfc5114.c
    Tongsuo/crypto/dso/dso_dl.c
    Tongsuo/crypto/dso/dso_dlfcn.c
    Tongsuo/crypto/dso/dso_err.c
    Tongsuo/crypto/dso/dso_lib.c
    Tongsuo/crypto/dso/dso_openssl.c
    Tongsuo/crypto/dso/dso_win32.c
    Tongsuo/crypto/ebcdic.c
    Tongsuo/crypto/ec/curve25519.c
    Tongsuo/crypto/ec/curve448/arch_32/f_impl32.c
    Tongsuo/crypto/ec/curve448/curve448.c
    Tongsuo/crypto/ec/curve448/curve448_tables.c
    Tongsuo/crypto/ec/curve448/eddsa.c
    Tongsuo/crypto/ec/curve448/f_generic.c
    Tongsuo/crypto/ec/curve448/scalar.c
    Tongsuo/crypto/ec/ec2_oct.c
    Tongsuo/crypto/ec/ec2_smpl.c
    Tongsuo/crypto/ec/ec_ameth.c
    Tongsuo/crypto/ec/ec_asn1.c
    Tongsuo/crypto/ec/ec_backend.c
    Tongsuo/crypto/ec/ec_check.c
    Tongsuo/crypto/ec/ec_curve.c
    Tongsuo/crypto/ec/ec_cvt.c
    Tongsuo/crypto/ec/ec_err.c
    Tongsuo/crypto/ec/ec_key.c
    Tongsuo/crypto/ec/ec_kmeth.c
    Tongsuo/crypto/ec/ec_lib.c
    Tongsuo/crypto/ec/ec_mult.c
    Tongsuo/crypto/ec/ec_oct.c
    Tongsuo/crypto/ec/ec_pmeth.c
    Tongsuo/crypto/ec/ec_print.c
    Tongsuo/crypto/ec/ecdh_kdf.c
    Tongsuo/crypto/ec/ecdh_ossl.c
    Tongsuo/crypto/ec/ecdsa_ossl.c
    Tongsuo/crypto/ec/ecdsa_sign.c
    Tongsuo/crypto/ec/ecdsa_vrf.c
    Tongsuo/crypto/ec/eck_prn.c
    Tongsuo/crypto/ec/ecp_mont.c
    Tongsuo/crypto/ec/ecp_nist.c
#    Tongsuo/crypto/ec/ecp_nistp224.c
#    Tongsuo/crypto/ec/ecp_nistp256.c
#    Tongsuo/crypto/ec/ecp_nistp521.c
    Tongsuo/crypto/ec/ecp_nistputil.c
    Tongsuo/crypto/ec/ecp_oct.c
    Tongsuo/crypto/ec/ecp_smpl.c
    Tongsuo/crypto/ec/ecx_backend.c
    Tongsuo/crypto/ec/ecx_key.c
    Tongsuo/crypto/ec/ecx_meth.c
    Tongsuo/crypto/encode_decode/decoder_err.c
    Tongsuo/crypto/encode_decode/decoder_lib.c
    Tongsuo/crypto/encode_decode/decoder_meth.c
    Tongsuo/crypto/encode_decode/decoder_pkey.c
    Tongsuo/crypto/encode_decode/encoder_err.c
    Tongsuo/crypto/encode_decode/encoder_lib.c
    Tongsuo/crypto/encode_decode/encoder_meth.c
    Tongsuo/crypto/encode_decode/encoder_pkey.c
    Tongsuo/crypto/err/err.c
    Tongsuo/crypto/err/err_blocks.c
    Tongsuo/crypto/err/err_prn.c
    Tongsuo/crypto/evp/asymcipher.c
    Tongsuo/crypto/evp/bio_b64.c
    Tongsuo/crypto/evp/bio_enc.c
    Tongsuo/crypto/evp/bio_md.c
    Tongsuo/crypto/evp/bio_ok.c
    Tongsuo/crypto/evp/c_allc.c
    Tongsuo/crypto/evp/c_alld.c
    Tongsuo/crypto/evp/cmeth_lib.c
    Tongsuo/crypto/evp/ctrl_params_translate.c
    Tongsuo/crypto/evp/digest.c
    Tongsuo/crypto/evp/dh_ctrl.c
    Tongsuo/crypto/evp/dh_support.c
    Tongsuo/crypto/evp/e_aes.c
    Tongsuo/crypto/evp/e_aes_cbc_hmac_sha1.c
    Tongsuo/crypto/evp/e_aes_cbc_hmac_sha256.c
    Tongsuo/crypto/evp/e_aes.c
    Tongsuo/crypto/evp/e_chacha20_poly1305.c
    Tongsuo/crypto/evp/e_null.c
    Tongsuo/crypto/evp/e_old.c
    Tongsuo/crypto/evp/e_sm4.c
    Tongsuo/crypto/evp/e_xcbc_d.c
    Tongsuo/crypto/evp/ec_ctrl.c
    Tongsuo/crypto/evp/ec_support.c
    Tongsuo/crypto/evp/encode.c
    Tongsuo/crypto/evp/evp_cnf.c
    Tongsuo/crypto/evp/evp_enc.c
    Tongsuo/crypto/evp/evp_err.c
    Tongsuo/crypto/evp/evp_fetch.c
    Tongsuo/crypto/evp/evp_key.c
    Tongsuo/crypto/evp/evp_lib.c
    Tongsuo/crypto/evp/evp_pbe.c
    Tongsuo/crypto/evp/evp_pkey.c
    Tongsuo/crypto/evp/evp_rand.c
    Tongsuo/crypto/evp/evp_utils.c
    Tongsuo/crypto/evp/exchange.c
    Tongsuo/crypto/evp/kdf_lib.c
    Tongsuo/crypto/evp/kdf_meth.c
    Tongsuo/crypto/evp/kem.c
    Tongsuo/crypto/evp/keymgmt_lib.c
    Tongsuo/crypto/evp/keymgmt_meth.c
    Tongsuo/crypto/evp/legacy_md5.c
    Tongsuo/crypto/evp/legacy_md5_sha1.c
    Tongsuo/crypto/evp/legacy_sha.c
    Tongsuo/crypto/evp/m_null.c
    Tongsuo/crypto/evp/m_sigver.c
    Tongsuo/crypto/evp/mac_lib.c
    Tongsuo/crypto/evp/mac_meth.c
    Tongsuo/crypto/evp/names.c
    Tongsuo/crypto/evp/p5_crpt.c
    Tongsuo/crypto/evp/p5_crpt2.c
    Tongsuo/crypto/evp/p_dec.c
    Tongsuo/crypto/evp/p_enc.c
    Tongsuo/crypto/evp/p_legacy.c
    Tongsuo/crypto/evp/p_lib.c
    Tongsuo/crypto/evp/p_open.c
    Tongsuo/crypto/evp/p_seal.c
    Tongsuo/crypto/evp/p_sign.c
    Tongsuo/crypto/evp/p_verify.c
    Tongsuo/crypto/evp/pbe_scrypt.c
    Tongsuo/crypto/evp/pmeth_check.c
    Tongsuo/crypto/evp/pmeth_gn.c
    Tongsuo/crypto/evp/pmeth_lib.c
    Tongsuo/crypto/evp/signature.c
    Tongsuo/crypto/ex_data.c
    Tongsuo/crypto/ffc/ffc_backend.c
    Tongsuo/crypto/ffc/ffc_dh.c
    Tongsuo/crypto/ffc/ffc_key_generate.c
    Tongsuo/crypto/ffc/ffc_key_validate.c
    Tongsuo/crypto/ffc/ffc_params_generate.c
    Tongsuo/crypto/ffc/ffc_params_validate.c
    Tongsuo/crypto/ffc/ffc_params.c
    Tongsuo/crypto/getenv.c
    Tongsuo/crypto/hmac/hmac.c
    Tongsuo/crypto/init.c
    Tongsuo/crypto/initthread.c
    Tongsuo/crypto/kdf/kdf_err.c
    Tongsuo/crypto/lhash/lh_stats.c
    Tongsuo/crypto/lhash/lhash.c
    Tongsuo/crypto/md5/md5_dgst.c
    Tongsuo/crypto/md5/md5_one.c
    Tongsuo/crypto/md5/md5_sha1.c
    Tongsuo/crypto/mem.c
    Tongsuo/crypto/mem_clr.c
    Tongsuo/crypto/mem_sec.c
    Tongsuo/crypto/modes/cbc128.c
    Tongsuo/crypto/modes/ccm128.c
    Tongsuo/crypto/modes/cfb128.c
    Tongsuo/crypto/modes/ctr128.c
    Tongsuo/crypto/modes/cts128.c
    Tongsuo/crypto/modes/gcm128.c
    Tongsuo/crypto/modes/ocb128.c
    Tongsuo/crypto/modes/ofb128.c
    Tongsuo/crypto/modes/wrap128.c
    Tongsuo/crypto/modes/xts128.c
    Tongsuo/crypto/o_dir.c
    Tongsuo/crypto/o_fopen.c
    Tongsuo/crypto/o_init.c
    Tongsuo/crypto/o_str.c
    Tongsuo/crypto/o_time.c
    Tongsuo/crypto/objects/o_names.c
    Tongsuo/crypto/objects/obj_dat.c
    Tongsuo/crypto/objects/obj_err.c
    Tongsuo/crypto/objects/obj_lib.c
    Tongsuo/crypto/objects/obj_xref.c
    Tongsuo/crypto/ocsp/ocsp_asn.c
    Tongsuo/crypto/ocsp/ocsp_cl.c
    Tongsuo/crypto/ocsp/ocsp_err.c
    Tongsuo/crypto/ocsp/ocsp_ext.c
    Tongsuo/crypto/ocsp/ocsp_http.c
    Tongsuo/crypto/ocsp/ocsp_lib.c
    Tongsuo/crypto/ocsp/ocsp_prn.c
    Tongsuo/crypto/ocsp/ocsp_srv.c
    Tongsuo/crypto/ocsp/ocsp_vfy.c
    Tongsuo/crypto/ocsp/v3_ocsp.c
    Tongsuo/crypto/packet.c
    Tongsuo/crypto/param_build.c
    Tongsuo/crypto/param_build_set.c
    Tongsuo/crypto/params.c
    Tongsuo/crypto/params_dup.c
    Tongsuo/crypto/params_from_text.c
    Tongsuo/crypto/passphrase.c
    Tongsuo/crypto/pem/pem_all.c
    Tongsuo/crypto/pem/pem_err.c
    Tongsuo/crypto/pem/pem_info.c
    Tongsuo/crypto/pem/pem_lib.c
    Tongsuo/crypto/pem/pem_oth.c
    Tongsuo/crypto/pem/pem_pk8.c
    Tongsuo/crypto/pem/pem_pkey.c
    Tongsuo/crypto/pem/pem_sign.c
    Tongsuo/crypto/pem/pem_x509.c
    Tongsuo/crypto/pem/pem_xaux.c
    Tongsuo/crypto/pem/pvkfmt.c
    Tongsuo/crypto/pkcs12/p12_add.c
    Tongsuo/crypto/pkcs12/p12_asn.c
    Tongsuo/crypto/pkcs12/p12_attr.c
    Tongsuo/crypto/pkcs12/p12_crpt.c
    Tongsuo/crypto/pkcs12/p12_crt.c
    Tongsuo/crypto/pkcs12/p12_decr.c
    Tongsuo/crypto/pkcs12/p12_init.c
    Tongsuo/crypto/pkcs12/p12_key.c
    Tongsuo/crypto/pkcs12/p12_kiss.c
    Tongsuo/crypto/pkcs12/p12_mutl.c
    Tongsuo/crypto/pkcs12/p12_npas.c
    Tongsuo/crypto/pkcs12/p12_p8d.c
    Tongsuo/crypto/pkcs12/p12_p8e.c
    Tongsuo/crypto/pkcs12/p12_sbag.c
    Tongsuo/crypto/pkcs12/p12_utl.c
    Tongsuo/crypto/pkcs12/pk12err.c
    Tongsuo/crypto/pkcs7/bio_pk7.c
    Tongsuo/crypto/pkcs7/pk7_asn1.c
    Tongsuo/crypto/pkcs7/pk7_attr.c
    Tongsuo/crypto/pkcs7/pk7_doit.c
    Tongsuo/crypto/pkcs7/pk7_lib.c
    Tongsuo/crypto/pkcs7/pk7_mime.c
    Tongsuo/crypto/pkcs7/pk7_smime.c
    Tongsuo/crypto/pkcs7/pkcs7err.c
    Tongsuo/crypto/provider.c
    Tongsuo/crypto/provider_core.c
    Tongsuo/crypto/provider_conf.c
    Tongsuo/crypto/provider_child.c
    Tongsuo/crypto/provider_predefined.c
    Tongsuo/crypto/property/property_string.c
    Tongsuo/crypto/property/property_query.c
    Tongsuo/crypto/property/property_parse.c
    Tongsuo/crypto/property/property_err.c
    Tongsuo/crypto/property/property.c
    Tongsuo/crypto/property/defn_cache.c
    Tongsuo/crypto/poly1305/poly1305.c
    Tongsuo/crypto/punycode.c
    Tongsuo/crypto/rand/prov_seed.c
    Tongsuo/crypto/rand/rand_egd.c
    Tongsuo/crypto/rand/rand_err.c
    Tongsuo/crypto/rand/rand_lib.c
    Tongsuo/crypto/rand/rand_meth.c
    Tongsuo/crypto/rand/rand_pool.c
    Tongsuo/crypto/rand/randfile.c
    Tongsuo/crypto/rsa/rsa_ameth.c
    Tongsuo/crypto/rsa/rsa_asn1.c
    Tongsuo/crypto/rsa/rsa_backend.c
    Tongsuo/crypto/rsa/rsa_chk.c
    Tongsuo/crypto/rsa/rsa_crpt.c
    Tongsuo/crypto/rsa/rsa_depr.c
    Tongsuo/crypto/rsa/rsa_err.c
    Tongsuo/crypto/rsa/rsa_gen.c
    Tongsuo/crypto/rsa/rsa_lib.c
    Tongsuo/crypto/rsa/rsa_meth.c
    Tongsuo/crypto/rsa/rsa_mp.c
    Tongsuo/crypto/rsa/rsa_mp_names.c
    Tongsuo/crypto/rsa/rsa_none.c
    Tongsuo/crypto/rsa/rsa_oaep.c
    Tongsuo/crypto/rsa/rsa_ossl.c
    Tongsuo/crypto/rsa/rsa_pk1.c
    Tongsuo/crypto/rsa/rsa_pmeth.c
    Tongsuo/crypto/rsa/rsa_prn.c
    Tongsuo/crypto/rsa/rsa_pss.c
    Tongsuo/crypto/rsa/rsa_saos.c
    Tongsuo/crypto/rsa/rsa_schemes.c
    Tongsuo/crypto/rsa/rsa_sign.c
    Tongsuo/crypto/rsa/rsa_sp800_56b_check.c
    Tongsuo/crypto/rsa/rsa_sp800_56b_gen.c
    Tongsuo/crypto/rsa/rsa_x931.c
    Tongsuo/crypto/rsa/rsa_x931g.c
    Tongsuo/crypto/sha/keccak1600.c
    Tongsuo/crypto/sha/sha1_one.c
    Tongsuo/crypto/sha/sha1dgst.c
    Tongsuo/crypto/sha/sha256.c
    Tongsuo/crypto/sha/sha512.c
    Tongsuo/crypto/sha/sha3.c
    Tongsuo/crypto/self_test_core.c
    Tongsuo/crypto/siphash/siphash.c
    Tongsuo/crypto/sm2/sm2_crypt.c
    Tongsuo/crypto/sm2/sm2_err.c
    Tongsuo/crypto/sm2/sm2_key.c
    Tongsuo/crypto/sm2/sm2_kmeth.c
    Tongsuo/crypto/sm2/sm2_sign.c
    Tongsuo/crypto/sm3/legacy_sm3.c
    Tongsuo/crypto/sm3/sm3.c
    Tongsuo/crypto/sm4/sm4.c
    Tongsuo/crypto/sparse_array.c
    Tongsuo/crypto/stack/stack.c
    Tongsuo/crypto/threads_lib.c
    Tongsuo/crypto/threads_none.c
    Tongsuo/crypto/threads_pthread.c
    Tongsuo/crypto/threads_win.c
    Tongsuo/crypto/trace.c
    Tongsuo/crypto/txt_db/txt_db.c
    Tongsuo/crypto/ui/ui_err.c
    Tongsuo/crypto/ui/ui_lib.c
    Tongsuo/crypto/ui/ui_null.c
    Tongsuo/crypto/ui/ui_openssl.c
    Tongsuo/crypto/ui/ui_util.c
    Tongsuo/crypto/uid.c
    Tongsuo/crypto/x509/by_dir.c
    Tongsuo/crypto/x509/by_file.c
    Tongsuo/crypto/x509/t_crl.c
    Tongsuo/crypto/x509/t_req.c
    Tongsuo/crypto/x509/t_x509.c
    Tongsuo/crypto/x509/x509_att.c
    Tongsuo/crypto/x509/x509_cmp.c
    Tongsuo/crypto/x509/x509_d2.c
    Tongsuo/crypto/x509/x509_def.c
    Tongsuo/crypto/x509/x509_err.c
    Tongsuo/crypto/x509/x509_ext.c
    Tongsuo/crypto/x509/x509_lu.c
    Tongsuo/crypto/x509/x509_meth.c
    Tongsuo/crypto/x509/x509_obj.c
    Tongsuo/crypto/x509/x509_r2x.c
    Tongsuo/crypto/x509/x509_req.c
    Tongsuo/crypto/x509/x509_set.c
    Tongsuo/crypto/x509/x509_trust.c
    Tongsuo/crypto/x509/x509_txt.c
    Tongsuo/crypto/x509/x509_v3.c
    Tongsuo/crypto/x509/x509_vfy.c
    Tongsuo/crypto/x509/x509_vpm.c
    Tongsuo/crypto/x509/x509cset.c
    Tongsuo/crypto/x509/x509name.c
    Tongsuo/crypto/x509/x509rset.c
    Tongsuo/crypto/x509/x509spki.c
    Tongsuo/crypto/x509/x509type.c
    Tongsuo/crypto/x509/x_all.c
    Tongsuo/crypto/x509/x_attrib.c
    Tongsuo/crypto/x509/x_crl.c
    Tongsuo/crypto/x509/x_exten.c
    Tongsuo/crypto/x509/x_name.c
    Tongsuo/crypto/x509/x_pubkey.c
    Tongsuo/crypto/x509/x_req.c
    Tongsuo/crypto/x509/x_x509.c
    Tongsuo/crypto/x509/x_x509a.c
    Tongsuo/crypto/x509/pcy_cache.c
    Tongsuo/crypto/x509/pcy_data.c
    Tongsuo/crypto/x509/pcy_lib.c
    Tongsuo/crypto/x509/pcy_map.c
    Tongsuo/crypto/x509/pcy_node.c
    Tongsuo/crypto/x509/pcy_tree.c
    Tongsuo/crypto/x509/v3_addr.c
    Tongsuo/crypto/x509/v3_admis.c
    Tongsuo/crypto/x509/v3_akeya.c
    Tongsuo/crypto/x509/v3_akid.c
    Tongsuo/crypto/x509/v3_asid.c
    Tongsuo/crypto/x509/v3_bcons.c
    Tongsuo/crypto/x509/v3_bitst.c
    Tongsuo/crypto/x509/v3_conf.c
    Tongsuo/crypto/x509/v3_cpols.c
    Tongsuo/crypto/x509/v3_crld.c
    Tongsuo/crypto/x509/v3_enum.c
    Tongsuo/crypto/x509/v3_extku.c
    Tongsuo/crypto/x509/v3_genn.c
    Tongsuo/crypto/x509/v3_ia5.c
    Tongsuo/crypto/x509/v3_info.c
    Tongsuo/crypto/x509/v3_int.c
    Tongsuo/crypto/x509/v3_lib.c
    Tongsuo/crypto/x509/v3_ncons.c
    Tongsuo/crypto/x509/v3_pci.c
    Tongsuo/crypto/x509/v3_pcia.c
    Tongsuo/crypto/x509/v3_pcons.c
    Tongsuo/crypto/x509/v3_pku.c
    Tongsuo/crypto/x509/v3_pmaps.c
    Tongsuo/crypto/x509/v3_prn.c
    Tongsuo/crypto/x509/v3_purp.c
    Tongsuo/crypto/x509/v3_san.c
    Tongsuo/crypto/x509/v3_skid.c
    Tongsuo/crypto/x509/v3_sxnet.c
    Tongsuo/crypto/x509/v3_tlsf.c
    Tongsuo/crypto/x509/v3_utl.c
    Tongsuo/crypto/x509/v3err.c

    Tongsuo/providers/baseprov.c
    Tongsuo/providers/defltprov.c
    Tongsuo/providers/legacyprov.c
    Tongsuo/providers/nullprov.c
    Tongsuo/providers/prov_running.c
    Tongsuo/providers/common/bio_prov.c
    Tongsuo/providers/common/capabilities.c
    Tongsuo/providers/common/der/der_ec_key.c
    Tongsuo/providers/common/der/der_ec_sig.c
    Tongsuo/providers/common/der/der_ecx_key.c
    Tongsuo/providers/common/der/der_rsa_key.c
    Tongsuo/providers/common/der/der_rsa_sig.c
    Tongsuo/providers/common/der/der_sm2_key.c
    Tongsuo/providers/common/der/der_sm2_sig.c
    Tongsuo/providers/common/digest_to_nid.c
    Tongsuo/providers/common/provider_err.c
    Tongsuo/providers/common/provider_ctx.c
    Tongsuo/providers/common/provider_seeding.c
    Tongsuo/providers/common/provider_util.c
    Tongsuo/providers/common/securitycheck_default.c
    Tongsuo/providers/common/securitycheck.c
    Tongsuo/providers/implementations/asymciphers/sm2_enc.c
    Tongsuo/providers/implementations/asymciphers/rsa_enc.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_hw.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_gcm_hw.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_gcm.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_ccm_hw.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_ccm.c
    Tongsuo/providers/implementations/ciphers/ciphercommon_block.c
    Tongsuo/providers/implementations/ciphers/ciphercommon.c
    Tongsuo/providers/implementations/ciphers/cipher_null.c
    Tongsuo/providers/implementations/ciphers/cipher_cts.c
    Tongsuo/providers/implementations/ciphers/cipher_aes.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_ccm.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_ccm_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_gcm_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_gcm.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_xts_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_xts_fips.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_xts.c
    Tongsuo/providers/implementations/ciphers/cipher_aes_wrp.c
    Tongsuo/providers/implementations/ciphers/cipher_chacha20.c
    Tongsuo/providers/implementations/ciphers/cipher_chacha20_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_chacha20_poly1305_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_chacha20_poly1305.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4_ccm.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4_ccm_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4_gcm.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4_gcm_hw.c
    Tongsuo/providers/implementations/ciphers/cipher_sm4_hw.c
    Tongsuo/providers/implementations/digests/digestcommon.c
    Tongsuo/providers/implementations/digests/sm3_prov.c
    Tongsuo/providers/implementations/digests/sha3_prov.c
    Tongsuo/providers/implementations/digests/sha2_prov.c
    Tongsuo/providers/implementations/digests/null_prov.c
    Tongsuo/providers/implementations/digests/md5_sha1_prov.c
    Tongsuo/providers/implementations/digests/md5_prov.c
    Tongsuo/providers/implementations/encode_decode/encode_key2text.c
    Tongsuo/providers/implementations/encode_decode/encode_key2ms.c
    Tongsuo/providers/implementations/encode_decode/encode_key2blob.c
    Tongsuo/providers/implementations/encode_decode/encode_key2any.c
    Tongsuo/providers/implementations/encode_decode/decode_spki2typespki.c
    Tongsuo/providers/implementations/encode_decode/decode_pvk2key.c
    Tongsuo/providers/implementations/encode_decode/decode_pem2der.c
    Tongsuo/providers/implementations/encode_decode/decode_msblob2key.c
    Tongsuo/providers/implementations/encode_decode/decode_epki2pki.c
    Tongsuo/providers/implementations/encode_decode/decode_der2key.c
    Tongsuo/providers/implementations/encode_decode/endecoder_common.c
    Tongsuo/providers/implementations/exchange/dh_exch.c
    Tongsuo/providers/implementations/exchange/ecdh_exch.c
    Tongsuo/providers/implementations/exchange/ecx_exch.c
    Tongsuo/providers/implementations/exchange/kdf_exch.c
    Tongsuo/providers/implementations/exchange/sm2dh_exch.c
    Tongsuo/providers/implementations/macs/siphash_prov.c
    Tongsuo/providers/implementations/macs/kmac_prov.c
    Tongsuo/providers/implementations/macs/hmac_prov.c
    Tongsuo/providers/implementations/macs/gmac_prov.c
    Tongsuo/providers/implementations/macs/poly1305_prov.c
    Tongsuo/providers/implementations/keymgmt/dh_kmgmt.c
    Tongsuo/providers/implementations/keymgmt/ec_kmgmt.c
    Tongsuo/providers/implementations/keymgmt/ecx_kmgmt.c
    Tongsuo/providers/implementations/keymgmt/kdf_legacy_kmgmt.c
    Tongsuo/providers/implementations/keymgmt/mac_legacy_kmgmt.c
    Tongsuo/providers/implementations/keymgmt/rsa_kmgmt.c
    Tongsuo/providers/implementations/kem/rsa_kem.c
    Tongsuo/providers/implementations/kdfs/x942kdf.c
    Tongsuo/providers/implementations/kdfs/tls1_prf.c
    Tongsuo/providers/implementations/kdfs/sskdf.c
    Tongsuo/providers/implementations/kdfs/sshkdf.c
    Tongsuo/providers/implementations/kdfs/scrypt.c
    Tongsuo/providers/implementations/kdfs/pkcs12kdf.c
    Tongsuo/providers/implementations/kdfs/pbkdf2_fips.c
    Tongsuo/providers/implementations/kdfs/pbkdf2.c
    Tongsuo/providers/implementations/kdfs/krb5kdf.c
    Tongsuo/providers/implementations/kdfs/kbkdf.c
    Tongsuo/providers/implementations/kdfs/hkdf.c
    Tongsuo/providers/implementations/rands/seeding/rand_win.c
    Tongsuo/providers/implementations/rands/seeding/rand_unix.c
    Tongsuo/providers/implementations/rands/seeding/rand_tsc.c
    Tongsuo/providers/implementations/rands/seeding/rand_cpu_x86.c
    Tongsuo/providers/implementations/rands/test_rng.c
    Tongsuo/providers/implementations/rands/seed_src.c
    Tongsuo/providers/implementations/rands/drbg_hmac.c
    Tongsuo/providers/implementations/rands/drbg_hash.c
    Tongsuo/providers/implementations/rands/drbg_ctr.c
    Tongsuo/providers/implementations/rands/drbg.c
    Tongsuo/providers/implementations/rands/crngt.c
    Tongsuo/providers/implementations/signature/ecdsa_sig.c
    Tongsuo/providers/implementations/signature/eddsa_sig.c
    Tongsuo/providers/implementations/signature/mac_legacy_sig.c
    Tongsuo/providers/implementations/signature/rsa_sig.c
    Tongsuo/providers/implementations/signature/sm2_sig.c

    Tongsuo/ssl/record/tls_pad.c
    Tongsuo/ssl/s3_cbc.c

    der_digests_gen.c
    der_rsa_gen.c
    der_wrap_gen.c
    rand_pool.c
    ossl_store.c
)

ADD_LIBRARY(tongsuolib STATIC ${src_tongsuolib})
